<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".shuffleActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/textGenerarAleatorios"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="30sp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:layout_marginBottom="20dp">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/radioSinRango"
            android:text="@string/textRadioSinRango"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/radioConRango"
            android:text="@string/textRadioRango"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:hint="@string/editTextMinimo"
            android:id="@+id/editText_minimo"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:hint="@string/editTextMaximo"
            android:id="@+id/editText_maximo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/chechBoxDecimales"
            android:id="@+id/checkbox_decimales"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:hint="@string/editTextDecimales"
            android:id="@+id/editText_numeroDecimales"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/textEnteros"
            android:textAlignment="center"
            android:paddingTop="15dp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:hint="@string/editTextEnteros"
            android:id="@+id/editText_numeroEnteros"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:text="@string/textRepetirNumero"
            android:textAlignment="center"
            android:paddingTop="10dp"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:ignore="UseSwitchCompatOrMaterialXml"
            android:id="@+id/switchRepetir"
            android:background="@drawable/shuffle_2"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/startup"
        android:id="@+id/btn_lanzar"
        android:layout_marginStart="150dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/text_numerosAleatorios"/>
</LinearLayout>